--- a/cmong/main.html
+++ b/cmong/main.html
@@ -260,10 +260,31 @@
     <section class="main-ineedpro-section">
       <div class="main-ineedpro">
         <div class="main-ineedpro-top">
-          <div class="main-ineedpro-top-right">
-            <h2 class="main-ineedpro-top-roght-head">내게 필요한 모든 전문가</h2>
-            <div class="main-ineedpro-top-roght-su">
+          <div class="main-ineedpro-top-left">
+            <h2 class="main-ineedpro-top-left-head">내게 필요한 모든 전문가</h2>
+            <div class="main-ineedpro-top-left-sub">
               누적 거래 533만 건! <br>700여 개의 카테고리와 6만여 개 서비스에서 <br>필요한 모든 전문가를 만나보세요.
+            </div>
+          </div>
+          <div class="cmong-yotube"></div>
+        </div>
+        <div class="main-ineedpro-bottom-container">
+          <div class="main-ineedpro-bottom-first-outline">
+            <div class="main-ineedpro-bottom-first">
+              <h3 class="main-ineedpro-bottom-first-head">빠른 커뮤니케이션</h3>
+              <div class="main-ineedpro-bottom-first-bottom">전문가와 실시간 대화로<br>빠르게 문의하고 거래 할 수 있어요.</div>
+            </div>
+          </div>
+          <div class="main-ineedpro-bottom-second-outline">
+            <div class="main-ineedpro-bottom-second">
+              <h3 class="main-ineedpro-bottom-second-head">크몽 안전결제</h3>
+              <div class="main-ineedpro-bottom-second-bottom">에스크로 결제 시스템으로<br>소중한 돈을 안전히 보호해 드려요.</div>
+            </div>
+          </div>
+          <div class="main-ineedpro-bottom-third-outline">
+            <div class="main-ineedpro-bottom-third">
+              <h3 class="main-ineedpro-bottom-third-head">만족스러운 결과물</h3>
+              <div class="main-ineedpro-bottom-third-bottom">평균만족도 98.8% <br>많은 회원들이 만족하고 있어요.</div>
             </div>
           </div>
         </div>
@@ -273,27 +294,33 @@
     <section class="main-livereview-section">
       <div class="main-livereview">
         <h2 class="main-livereview-top">크몽을 이용한 회원들의 생생한 후기</h2>
-        <div class="main-livereview-top-1">299만 건의 리뷰에서 평균 만족도는 98.8%에 달했어요.</div>
+        <div class="main-livereview-top-1">301만 건의 리뷰에서 평균 만족도는 98.8%에 달했어요.</div>
         <section class="main-livereview-bottom-container">
           <article class="main-livereview-bottom-first">
-            <div class="main-livereview-bottom-youtube"></div>
+            <div class="main-livereview-bottom-youtube">
+
+            </div>
             <div class="main-livereview-bottom-youtube-bottom">
-              <div class="main-livereview-bottom-youtube-bottom-left"></div>
-              <div class="main-livereview-bottom-youtube-bottom-right"></div>
+              <div class="main-livereview-bottom-youtube-bottom-left">안재식당|</div>
+              <div class="main-livereview-bottom-youtube-bottom-right">자영업자</div>
             </div>
           </article>
           <article class="main-livereview-bottom-second">
-            <div class="main-livereview-bottom-youtube"></div>
+            <div class="main-livereview-bottom-youtube">
+
+            </div>
             <div class="main-livereview-bottom-youtube-bottom">
-              <div class="main-livereview-bottom-youtube-bottom-left"></div>
-              <div class="main-livereview-bottom-youtube-bottom-right"></div>
+              <div class="main-livereview-bottom-youtube-bottom-left">필로스토리|</div>
+              <div class="main-livereview-bottom-youtube-bottom-right">2인 창업팀</div>
             </div>
           </article>
           <article class="main-livereview-bottom-third">
-            <div class="main-livereview-bottom-youtube"></div>
+            <div class="main-livereview-bottom-youtube">
+              <div></div>
+            </div>
             <div class="main-livereview-bottom-youtube-bottom">
-              <div class="main-livereview-bottom-youtube-bottom-left"></div>
-              <div class="main-livereview-bottom-youtube-bottom-right"></div>
+              <div class="main-livereview-bottom-youtube-bottom-left">데이터비|</div>
+              <div class="main-livereview-bottom-youtube-bottom-right">엔터프라이즈 고객</div>
             </div>
           </article>
         </section>
@@ -302,8 +329,30 @@
 
     <section class="main-workchange-section">
       <div class="main-workchange">
-        <h2></h2>
-        <div></div>
+        <div class="main-workchange-top-container">
+          <h2 class="main-workchange-top">크몽, 일하는 방식을 바꾸다</h2>
+          <div class="main-workchange-top">크몽으로 똑똑하게 일하는 사람들의 이야기를 들어보세요</div>
+        </div>
+        <div class="main-workchage-bottom-container">
+          <div class="main-workchage-bottom">
+            <div class="main-workchange-bottom-img-outline">
+              <img src="" alt="" class="main-workchange-img">
+            </div>
+            <div class="main-workspace-bottom-">
+
+            </div>
+          </div>
+          <div class="main-workchage-bottom">
+            <div class="main-workchange-bottom-img-outline">
+              <img src="" alt="" class="main-workchange-img">
+            </div>
+          </div>
+          <div class="main-workchage-bottom">
+            <div class="main-workchange-bottom-img-outline">
+              <img src="" alt="" class="main-workchange-img">
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
